...
  DbConnection? db;

  int? moviesCount;
  List? movies;
  List<List?>? moviesTvShows = [];
  List<String?>? heroGenres = [];
  String? _typeValue = 'All';
  String? _genreValue = 'All';
  bool isLoading = true;
  List<List> movieGenres = [
    ['28', 'Action'],
    ['12', 'Adventure'],
    ['16', 'Animation'],
    ['35', 'Comedy'],
    ['80', 'Crime'],
    ['99', 'Documentary'],
    ['18', 'Drama'],
...
    ['10767', 'Talk'],
    ['10768', 'War & Politics'],
    ['37', 'Western']
  ];

  Icon visibleIcon = Icon(Icons.search);
  Widget searchBar = Text('Notflix');

  @override
  void initState() {
    helper = APIRunner();
    initialize();
    super.initState();
...
      },
    );
  }

        // for(int i = 0; i < movies![0].genres.length; i++) {
      // heroGenres?.add(
      //   await helper?.getGenreByID(movies?[0].genres[i], 'Movies')
      // );

  Future initialize() async {
    moviesTvShows = []; // reset moviesTvShows
    heroGenres = []; // reset hero genres

...
      child: Row(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Padding(
            padding:  EdgeInsets.only(right: 16),
            child:
              Text('Categories:')
          ),
          Padding( 
            padding:  EdgeInsets.only(right: 16),
            child:
              DropdownButton<String>(
                value: _typeValue,
...
    child: Row(
      mainAxisAlignment: MainAxisAlignment.center,
      children: [
        Padding(
          padding:  EdgeInsets.only(right: 16),
          child:
            Text('Genres:')
        ),
        Padding( 
          padding:  EdgeInsets.only(right: 16),
          child:
            DropdownButton<String>(
              value: _genreValue,
...
