...
              } else {
                search(text);
              }
            },
            style: TextStyle(color: Colors.white, fontSize: 20.0),
            decoration: InputDecoration(
              hintText: "Search For Movies",
              suffixIcon: _searchController.text.isNotEmpty
                  ? IconButton(
                      icon: Icon(Icons.clear),
                      onPressed: () {
                        _searchController.clear();
                        clearSearch();
...
              Padding(
                padding: const EdgeInsets.only(
                  left: 30.0,
                  top: 5.0,
                  bottom: 5.0,
                ),
                child: Text('Upcoming Movies', textScaler: TextScaler.linear(1.2)),
              ),
              CarouselSlider(
                options: CarouselOptions(
                  height: 350,
                  viewportFraction: 1.0,
                  enableInfiniteScroll: false,
...
